Compiler/tests/good/Ifs/05_if.rs
fn main(){
    let x : i32 = 10;

    if(x < 12) {
        println!(1);
    }
    println!(2);

    return;
}