Compiler/tests/bad/Ifs/04_ifs.rs
// else if without test condition

fn main(){
    let x:i32 = 42;
    if x < 50 {
        println!(x);
    } else if {
        println!(23);
    } else {
        println!(26);
    }
}